# Phish_Email_Detection_Agent

./: AGENTS.md  README.md  pyproject.toml  setup.sh
apps/cli/: main.py
apps/demo/: README.md  __init__.py  gradio_app.py
configs/: app.yaml
configs/connectors/: gmail.yaml  imap.yaml
configs/profiles/: fast.yaml
configs/providers/: ollama.yaml
connectors/: __init__.py
connectors/gmail/: __init__.py  client.py  mapper.py  oauth.py
connectors/imap/: __init__.py  client.py  mapper.py
docs/: glossary.md  index.md  protocol_v1.md
docs/agent/: agent_roles.md  decision_logic.md  failure_modes.md  reasoning_policy.md
docs/architecture/: agent_components.md  execution_model.md  system_overview.md  toolchain.md  workflow_pipeline.md
docs/deployment/: configuration.md  deployment_models.md
docs/detection_pipeline/: evidence_collection.md  ingestion.md  normalization.md  parsing.md  risk_scoring.md
docs/developer_guide/: adding_skills.md  adding_tools.md  code_structure.md  debugging.md
docs/skills/: bec_detection.md  (+5 more)
engine/: __init__.py  argis.py  config.py  explanation.py  orchestrator.py  player.py  policy.py  queuepair.py  recorder.py  report.py  router.py  session.py  state.py  task.py  turn.py
protocol/: __init__.py  events.py  op.py  serde.py  types.py
providers/: __init__.py
tests/: test_content_analyzer.py  test_contextual_escalation.py  test_explain.py  test_router.py
tools_builtin/: __init__.py  attachment_analyzer.py  content_analyzer.py  domain_risk.py  header_analyzer.py  parser.py  tool_registry.py  url_analyzer.py  url_utils.py
(+22 files in other folders)
